--- a/package.json
+++ b/package.json
@@ -1,72 +1,42 @@
 {
-  "name": "aureate-launcher",
+  "name": "minecraft-launcher",
   "version": "1.0.0",
-  "description": "Aureate Launcher - Премиум лаунчер для Minecraft с кастомными модпаками",
-  "main": "src/main/main.js",
+  "description": "Universal Minecraft Launcher with C++ Core",
+  "main": "src/ui/main.js",
   "scripts": {
     "start": "electron .",
+    "build:core": "cmake -B build -S . && cmake --build build --config Release",
+    "install": "npm run build:core",
     "dev": "electron .",
-    "test": "node test-launch.js",
-    "debug": "node debug-launch.js",
-    "check-jar": "node check_jar.js",
-    "build": "electron-builder",
-    "build:win": "electron-builder --win --x64",
-    "build:linux": "electron-builder --linux",
-    "pack": "electron-builder --dir"
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "build": {
-    "appId": "com.aureate.launcher",
-    "productName": "Aureate Launcher",
+    "appId": "com.minecraft.universallauncher",
+    "productName": "Minecraft Launcher",
     "directories": {
       "output": "dist"
     },
     "files": [
       "src/**/*",
-      "assets/**/*",
-      "package.json"
+      "!src/core/**/*.cpp",
+      "!src/core/**/*.h",
+      "!**/*.map"
+    ],
+    "extraResources": [
+      "build/Release/minecraft_core.node"
     ],
     "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "icon": "assets/logo.ico"
-    },
-    "linux": {
-      "target": [
-        "AppImage"
-      ],
-      "icon": "assets/logo.ico",
-      "category": "Game"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true
+      "target": "nsis",
+      "icon": "src/ui/assets/icon.ico"
     }
   },
-  "keywords": [
-    "minecraft",
-    "launcher",
-    "game"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
-    "adm-zip": "^0.5.16",
-    "axios": "^1.6.0",
-    "extract-zip": "^2.0.1",
-    "fs-extra": "^11.1.1",
-    "node-stream-zip": "^1.15.0",
-    "p-limit": "^3.1.0"
+    "electron": "^25.0.0"
   },
   "devDependencies": {
-    "electron": "^27.0.0",
-    "electron-builder": "^24.6.4"
-  }
+    "electron-builder": "^24.6.4",
+    "node-gyp": "^9.0.0"
+  },
+  "gypfile": true
 }
