--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,64 +1,74 @@
-cmake_minimum_required(VERSION 3.15)
-project(minecraft_core VERSION 1.0.0)
+cmake_minimum_required(VERSION 3.14)
+project(AureateLauncherCore)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Для Windows
+# Настройки для разных платформ
 if(WIN32)
-    add_compile_definitions(_WIN32_WINNT=0x0601 NOMINMAX WIN32_LEAN_AND_MEAN)
-    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+    add_definitions(-DWIN32_LEAN_AND_MEAN -D_WIN32_WINNT=0x0A00)
+    set(PLATFORM_LIBS winhttp.lib)
+else()
+    find_package(CURL REQUIRED)
+    set(PLATFORM_LIBS ${CURL_LIBRARIES})
 endif()
 
-# Находим Node.js
+# Настройки для Node Addon API
 find_package(Nodejs REQUIRED)
 include_directories(${NODEJS_INCLUDE_DIRS})
 
-# Пути
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Release)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Release)
+# Ищем NAN (Native Abstractions for Node.js)
+find_path(NAN_INCLUDE_DIR NAMES nan.h
+    PATHS ${NODEJS_INCLUDE_DIRS}/../src
+    DOC "Path to NAN headers")
 
-# Основной модуль
-add_library(minecraft_core SHARED
-    src/core/src/native_module.cpp
-    src/core/src/launcher_core.cpp
-    src/core/src/version_resolver.cpp
-    src/core/src/java_manager.cpp
-    src/core/src/download_manager.cpp
-    src/core/src/pack_manager.cpp
-    src/core/src/modloaders/forge_handler.cpp
-    src/core/src/modloaders/fabric_handler.cpp
-    src/core/src/modloaders/universal_handler.cpp
-    src/core/src/utils/file_utils.cpp
-    src/core/src/utils/string_utils.cpp
-    src/core/src/utils/process_utils.cpp
+# Ищем node-addon-api
+find_path(NAPI_INCLUDE_DIR NAMES napi.h
+    PATHS ${NODEJS_INCLUDE_DIRS}/../src
+    DOC "Path to node-addon-api headers")
+
+include_directories(${NAN_INCLUDE_DIR} ${NAPI_INCLUDE_DIR})
+
+# Ищем nlohmann/json
+find_package(nlohmann_json 3.2.0 REQUIRED)
+
+# Ищем zlib для работы с ZIP
+find_package(ZLIB REQUIRED)
+
+# Ищем OpenSSL для HTTPS
+find_package(OpenSSL REQUIRED)
+
+# Основная библиотека
+add_library(launcher_core SHARED
+    src/launcher_core.cpp
+    src/version_resolver.cpp
+    src/java_manager.cpp
+    src/download_manager.cpp
+    src/pack_manager.cpp
+    src/modloaders/forge_handler.cpp
+    src/modloaders/fabric_handler.cpp
+    src/modloaders/universal_handler.cpp
+    src/utils/file_utils.cpp
+    src/utils/string_utils.cpp
+    src/utils/process_utils.cpp
+    src/native_module.cpp
 )
 
-# Заголовочные файлы
-target_include_directories(minecraft_core PRIVATE
+target_include_directories(launcher_core PRIVATE 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${NAN_INCLUDE_DIR}
+    ${NAPI_INCLUDE_DIR}
     ${NODEJS_INCLUDE_DIRS}
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/core/include
 )
 
-# Ссылки
-target_link_libraries(minecraft_core ${NODEJS_LIBRARY})
+target_link_libraries(launcher_core
+    ${PLATFORM_LIBS}
+    ZLIB::ZLIB
+    OpenSSL::SSL
+    OpenSSL::Crypto
+    nlohmann_json::nlohmann_json
+)
 
-# Для Windows
-if(WIN32)
-    target_link_libraries(minecraft_core
-        ws2_32
-        wininet
-        shell32
-        advapi32
-    )
-endif()
-
-# Для macOS
-if(APPLE)
-    set_target_properties(minecraft_core PROPERTIES
-        MACOSX_RPATH ON
-        INSTALL_RPATH "@loader_path"
-    )
-    target_link_options(minecraft_core PRIVATE -undefined dynamic_lookup)
-endif()
+# Установка
+install(TARGETS launcher_core
+    DESTINATION ${CMAKE_BINARY_DIR}/Release)
