--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,70 +6,121 @@ on:
       - 'v*'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build-windows:
     runs-on: windows-latest
-    
+    strategy:
+      matrix:
+        node-version: [18.x]
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
-        node-version: '18.x'
-    
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+
     - name: Install dependencies
       run: |
         npm ci
         cd src/ui && npm ci
-        cd ../bridge && npm ci
-    
-    - name: Build JavaScript app
+
+    - name: Create necessary directories
       run: |
-        # Создаем необходимые директории
         mkdir -p src/ui/assets
-        # Копируем иконки если есть
-        if [ ! -f "src/ui/assets/icon.ico" ]; then
-          echo "Creating placeholder icon..."
-          # Можно создать простую иконку или пропустить
-        fi
-        
-        # Собираем Electron приложение (пропускаем C++ для CI)
-        npm run build:windows
-      
-    - name: Upload artifact
+        # Create placeholder icons if they don't exist
+        if not exist "src/ui/assets/icon.ico" (
+          echo "Placeholder icon would be created here"
+        )
+
+    - name: Build Windows
+      run: npm run build:windows
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload Windows Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: windows-build
-        path: dist/
-        
+        name: aureate-launcher-windows
+        path: dist/*.exe
+        if-no-files-found: error
+
   build-linux:
     runs-on: ubuntu-latest
-    
+    strategy:
+      matrix:
+        node-version: [18.x]
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Node.js
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
-        node-version: '18.x'
-    
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+
     - name: Install dependencies
       run: |
         npm ci
         cd src/ui && npm ci
-        cd ../bridge && npm ci
-        # Устанавливаем системные зависимости
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libnotify-dev libnss3-dev libxss-dev libasound2-dev
-    
-    - name: Build JavaScript app
+
+    - name: Create necessary directories
       run: |
         mkdir -p src/ui/assets
-        npm run build:linux
-      
-    - name: Upload artifact
+
+    - name: Build Linux
+      run: npm run build:linux
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload Linux Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: linux-build
+        name: aureate-launcher-linux
+        path: dist/*.AppImage
+        if-no-files-found: error
+
+  release:
+    needs: [build-windows, build-linux]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    
+    steps:
+    - name: Download Windows Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: aureate-launcher-windows
         path: dist/
+
+    - name: Download Linux Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: aureate-launcher-linux
+        path: dist/
+
+    - name: Display structure of files to be uploaded
+      run: ls -la dist/
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          dist/*.exe
+          dist/*.AppImage
+        draft: false
+        prerelease: false
+        generate_release_notes: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
