--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,32 @@
-name: Build and Release
+name: Build Minecraft Launcher
 
 on:
   push:
+    branches:
+      - main
+      - master
     tags:
       - 'v*'
-  workflow_dispatch:
-
-permissions:
-  contents: write
+  pull_request:
+    branches:
+      - main
+      - master
+  workflow_dispatch:  # Позволяет запускать вручную
 
 jobs:
   build-windows:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
-
+    
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '18'
         cache: 'npm'
 
     - name: Install dependencies
@@ -33,40 +34,40 @@ jobs:
         npm ci
         cd src/ui && npm ci
 
-    - name: Create necessary directories
+    - name: Create assets directory
       run: |
         mkdir -p src/ui/assets
-        # Create placeholder icons if they don't exist
+        # Create placeholder icon if doesn't exist
         if not exist "src/ui/assets/icon.ico" (
-          echo "Placeholder icon would be created here"
+          echo // Placeholder icon > src/ui/assets/icon.ico
         )
 
-    - name: Build Windows
+    - name: Build Windows executable
       run: npm run build:windows
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload Windows Artifact
+    - name: Upload Windows artifacts
       uses: actions/upload-artifact@v4
       with:
         name: aureate-launcher-windows
-        path: dist/*.exe
-        if-no-files-found: error
+        path: |
+          dist/*.exe
+          dist/*.msi
+          dist/*.nsis.exe
+        retention-days: 30
 
   build-linux:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
-
+    
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '18'
         cache: 'npm'
 
     - name: Install dependencies
@@ -76,49 +77,65 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libnotify-dev libnss3-dev libxss-dev libasound2-dev
 
-    - name: Create necessary directories
+    - name: Create assets directory
       run: |
         mkdir -p src/ui/assets
+        # Create placeholder icon if doesn't exist
+        if [ ! -f "src/ui/assets/icon.png" ]; then
+          echo "Creating placeholder icon..."
+          # Можно установить imagemagick для создания иконки
+          # sudo apt-get install -y imagemagick
+          # convert -size 512x512 xc:#3498db icon.png
+        fi
 
-    - name: Build Linux
+    - name: Build Linux AppImage
       run: npm run build:linux
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload Linux Artifact
+    - name: Upload Linux artifacts
       uses: actions/upload-artifact@v4
       with:
         name: aureate-launcher-linux
-        path: dist/*.AppImage
-        if-no-files-found: error
+        path: |
+          dist/*.AppImage
+          dist/*.deb
+        retention-days: 30
 
   release:
     needs: [build-windows, build-linux]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     
+    permissions:
+      contents: write
+    
     steps:
     - name: Download Windows Artifact
       uses: actions/download-artifact@v4
       with:
         name: aureate-launcher-windows
-        path: dist/
+        path: artifacts/windows/
 
     - name: Download Linux Artifact
       uses: actions/download-artifact@v4
       with:
         name: aureate-launcher-linux
-        path: dist/
+        path: artifacts/linux/
 
-    - name: Display structure of files to be uploaded
-      run: ls -la dist/
+    - name: List files for release
+      run: |
+        echo "Windows artifacts:"
+        ls -la artifacts/windows/ || true
+        echo "Linux artifacts:"
+        ls -la artifacts/linux/ || true
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          dist/*.exe
-          dist/*.AppImage
+          artifacts/windows/*
+          artifacts/linux/*
         draft: false
         prerelease: false
         generate_release_notes: true
