--- a/src/bridge/package.json
+++ b/src/bridge/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "fs-extra": "^11.1.1"
-  }
+    "fs-extra": "^11.3.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
