--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,17 @@
-name: Build Minecraft Launcher
+name: Build Windows Launcher
 
 on:
   push:
-    branches:
-      - main
-      - master
-    tags:
-      - 'v*'
-  pull_request:
-    branches:
-      - main
-      - master
-  workflow_dispatch:  # Позволяет запускать вручную
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build-windows:
     runs-on: windows-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -31,16 +21,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm ci
-        cd src/ui && npm ci
-
-    - name: Create assets directory
-      run: |
-        mkdir -p src/ui/assets
-        # Create placeholder icon if doesn't exist
-        if not exist "src/ui/assets/icon.ico" (
-          echo // Placeholder icon > src/ui/assets/icon.ico
-        )
+        npm install
+        cd src/ui && npm install
+        cd ../bridge && npm install
 
     - name: Build Windows executable
       run: npm run build:windows
@@ -51,93 +34,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: aureate-launcher-windows
-        path: |
-          dist/*.exe
-          dist/*.msi
-          dist/*.nsis.exe
+        path: dist/*.exe
         retention-days: 30
-
-  build-linux:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        cache: 'npm'
-
-    - name: Install dependencies
-      run: |
-        npm ci
-        cd src/ui && npm ci
-        sudo apt-get update
-        sudo apt-get install -y libgtk-3-dev libnotify-dev libnss3-dev libxss-dev libasound2-dev
-
-    - name: Create assets directory
-      run: |
-        mkdir -p src/ui/assets
-        # Create placeholder icon if doesn't exist
-        if [ ! -f "src/ui/assets/icon.png" ]; then
-          echo "Creating placeholder icon..."
-          # Можно установить imagemagick для создания иконки
-          # sudo apt-get install -y imagemagick
-          # convert -size 512x512 xc:#3498db icon.png
-        fi
-
-    - name: Build Linux AppImage
-      run: npm run build:linux
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload Linux artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: aureate-launcher-linux
-        path: |
-          dist/*.AppImage
-          dist/*.deb
-        retention-days: 30
-
-  release:
-    needs: [build-windows, build-linux]
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    
-    permissions:
-      contents: write
-    
-    steps:
-    - name: Download Windows Artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: aureate-launcher-windows
-        path: artifacts/windows/
-
-    - name: Download Linux Artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: aureate-launcher-linux
-        path: artifacts/linux/
-
-    - name: List files for release
-      run: |
-        echo "Windows artifacts:"
-        ls -la artifacts/windows/ || true
-        echo "Linux artifacts:"
-        ls -la artifacts/linux/ || true
-
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: |
-          artifacts/windows/*
-          artifacts/linux/*
-        draft: false
-        prerelease: false
-        generate_release_notes: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
