--- a/src/bridge/package.json
+++ b/src/bridge/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "mc-launcher-bridge",
+  "name": "aureate-launcher-bridge",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "fs-extra": "^11.3.2"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "fs-extra": "^11.1.1"
+  }
 }
