--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "ui",
+  "name": "aureate-launcher-ui",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "fs-extra": "^11.1.1"
+  }
 }
